[package]
name = "kv-store"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3.3"


[lib]
path = "src/lib.rs"


[[bin]]
name = "kv-store-bin"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
